--- a/Journal/Journal/Storyboards/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Storyboards/Base.lproj/Main.storyboard
@@ -55,9 +55,9 @@
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="entryBodyLabel" destination="YQ1-D4-Xzh" id="RiF-dK-zCi"/>
+                                    <outlet property="entryDateLabel" destination="l4Z-jM-Zdy" id="d4f-is-r5c"/>
                                     <outlet property="entryTitleLabel" destination="eDR-ny-2tC" id="TPX-Is-aC8"/>
-                                    <outlet property="entyDateLabel" destination="l4Z-jM-Zdy" id="yOj-gs-cRa"/>
-                                    <segue destination="fob-Q6-qBa" kind="show" identifier="ViewEntryShowSegue" id="Oi9-hC-zx7"/>
+                                    <segue destination="BYZ-38-t0r" kind="show" identifier="ViewEntryShowSegue" id="d4J-68-4NX"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -70,7 +70,7 @@
                     <navigationItem key="navigationItem" title="Journal" id="Sf4-AY-vVk">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="ngz-BD-rQp">
                             <connections>
-                                <segue destination="fob-Q6-qBa" kind="presentation" identifier="CreateJournalModalSegue" modalPresentationStyle="fullScreen" id="KyS-tm-5cC"/>
+                                <segue destination="BYZ-38-t0r" kind="show" identifier="CreateJournalModalSegue" id="eyz-Q9-2ro"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -105,15 +105,23 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="b4t-Fu-Yzh">
-                                <rect key="frame" x="20" y="160" width="374" height="358.5"/>
+                                <rect key="frame" x="20" y="108" width="374" height="358.5"/>
                                 <subviews>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="YZ2-Eg-yFY">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="32"/>
+                                        <segments>
+                                            <segment title="😀"/>
+                                            <segment title="😐"/>
+                                            <segment title="☹️"/>
+                                        </segments>
+                                    </segmentedControl>
                                     <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a title:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7Uz-gw-zTL">
-                                        <rect key="frame" x="0.0" y="0.0" width="374" height="34"/>
+                                        <rect key="frame" x="0.0" y="51" width="374" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="HKM-sY-RQX">
-                                        <rect key="frame" x="0.0" y="54" width="374" height="304.5"/>
+                                        <rect key="frame" x="0.0" y="105" width="374" height="253.5"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                         <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -134,18 +142,19 @@
                     <navigationItem key="navigationItem" title="Create Entry" id="Bht-Fj-aDq">
                         <barButtonItem key="rightBarButtonItem" systemItem="save" id="Znq-eC-mn3">
                             <connections>
-                                <action selector="save:" destination="BYZ-38-t0r" id="lQj-yj-QWV"/>
+                                <action selector="save:" destination="BYZ-38-t0r" id="2kN-h6-SAX"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="entryTextView" destination="HKM-sY-RQX" id="wB2-xQ-kSo"/>
-                        <outlet property="entryTitleTextField" destination="7Uz-gw-zTL" id="L2e-hZ-ILd"/>
+                        <outlet property="entryTextView" destination="HKM-sY-RQX" id="fRd-0y-GKq"/>
+                        <outlet property="entryTitleTextField" destination="7Uz-gw-zTL" id="hA8-TY-b7R"/>
+                        <outlet property="moodSegmentedControl" destination="YZ2-Eg-yFY" id="NLg-ic-nTb"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="836" y="113"/>
+            <point key="canvasLocation" x="835" y="113"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="5UW-ht-IJL">
@@ -168,6 +177,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="Oi9-hC-zx7"/>
+        <segue reference="eyz-Q9-2ro"/>
     </inferredMetricsTieBreakers>
 </document>
