Final pieces to get it working.

--- a/Journal/Journal/Storyboards/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Storyboards/Base.lproj/Main.storyboard
@@ -67,7 +67,7 @@
             </objects>
             <point key="canvasLocation" x="1197.1014492753625" y="-111.16071428571428"/>
         </scene>
-        <!--Entries Table View Controller-->
+        <!--Journal - Day 2-->
         <scene sceneID="dpa-3P-asU">
             <objects>
                 <tableViewController id="njH-KG-Q8z" customClass="EntriesTableViewController" customModule="Journal" customModuleProvider="target" sceneMemberID="viewController">
@@ -124,7 +124,7 @@
                             <outlet property="delegate" destination="njH-KG-Q8z" id="Xm1-x8-1eH"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="Kln-We-yw1">
+                    <navigationItem key="navigationItem" title="Journal - Day 2" id="Kln-We-yw1">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="dfH-uP-hrq">
                             <connections>
                                 <segue destination="DGw-Sw-ei1" kind="show" identifier="CreateSegue" id="4Cr-Ti-cVA"/>
