Journal Part 2 complete, but still has an unexpected nil value.

--- a/Journal/Journal/Storyboards/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Storyboards/Base.lproj/Main.storyboard
@@ -57,7 +57,7 @@
                                     <outlet property="entryBodyLabel" destination="YQ1-D4-Xzh" id="RiF-dK-zCi"/>
                                     <outlet property="entryDateLabel" destination="l4Z-jM-Zdy" id="d4f-is-r5c"/>
                                     <outlet property="entryTitleLabel" destination="eDR-ny-2tC" id="TPX-Is-aC8"/>
-                                    <segue destination="BYZ-38-t0r" kind="show" identifier="ViewEntryShowSegue" id="d4J-68-4NX"/>
+                                    <segue destination="BYZ-38-t0r" kind="show" identifier="ViewEntryShowSegue" id="BUJ-oF-iFy"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -177,6 +177,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="eyz-Q9-2ro"/>
+        <segue reference="BUJ-oF-iFy"/>
     </inferredMetricsTieBreakers>
 </document>
