--- a/Journal/Journal/SB/Base.lproj/Main.storyboard
+++ b/Journal/Journal/SB/Base.lproj/Main.storyboard
@@ -43,13 +43,13 @@
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="NS3-5O-zG5" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="wzS-XX-n2v" secondAttribute="trailing" constant="194" id="4cP-sv-NT2"/>
                                         <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="8FF-Gh-VHB" secondAttribute="bottom" constant="5" id="5eV-l5-TyF"/>
                                         <constraint firstItem="8FF-Gh-VHB" firstAttribute="top" secondItem="wzS-XX-n2v" secondAttribute="bottom" constant="10" id="LMT-gG-og8"/>
                                         <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="8FF-Gh-VHB" secondAttribute="trailing" id="NzE-DZ-qxb"/>
                                         <constraint firstItem="wzS-XX-n2v" firstAttribute="top" secondItem="B2l-qT-nOJ" secondAttribute="topMargin" id="YFe-sx-crw"/>
                                         <constraint firstItem="NS3-5O-zG5" firstAttribute="top" secondItem="B2l-qT-nOJ" secondAttribute="topMargin" id="gPX-pd-t68"/>
                                         <constraint firstItem="wzS-XX-n2v" firstAttribute="leading" secondItem="B2l-qT-nOJ" secondAttribute="leadingMargin" constant="5" id="kJc-5p-hEy"/>
+                                        <constraint firstItem="NS3-5O-zG5" firstAttribute="leading" relation="lessThanOrEqual" secondItem="wzS-XX-n2v" secondAttribute="trailing" constant="194" id="nGS-5R-TeS"/>
                                         <constraint firstItem="8FF-Gh-VHB" firstAttribute="leading" secondItem="B2l-qT-nOJ" secondAttribute="leadingMargin" constant="5" id="oha-Nh-0vS"/>
                                         <constraint firstItem="NS3-5O-zG5" firstAttribute="trailing" secondItem="B2l-qT-nOJ" secondAttribute="trailingMargin" constant="5" id="uS7-Xq-fM1"/>
                                     </constraints>
@@ -88,24 +88,35 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a title:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OhR-jQ-O2v">
-                                <rect key="frame" x="20" y="160" width="374" height="34"/>
+                                <rect key="frame" x="20" y="191" width="374" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Pjg-cV-eKD">
-                                <rect key="frame" x="20" y="214" width="374" height="248"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Journal Text" textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="Pjg-cV-eKD">
+                                <rect key="frame" x="20" y="245" width="374" height="217"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="lbN-iW-Q6S">
+                                <rect key="frame" x="20" y="140" width="374" height="32"/>
+                                <segments>
+                                    <segment title="🙂"/>
+                                    <segment title="😐"/>
+                                    <segment title="🙁"/>
+                                </segments>
+                            </segmentedControl>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" systemColor="opaqueSeparatorColor" red="0.77647058820000003" green="0.77647058820000003" blue="0.7843137255" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="ivg-hY-e89" firstAttribute="trailing" secondItem="OhR-jQ-O2v" secondAttribute="trailing" constant="20" id="68S-bf-M0G"/>
+                            <constraint firstItem="OhR-jQ-O2v" firstAttribute="top" secondItem="lbN-iW-Q6S" secondAttribute="bottom" constant="20" id="6NW-bb-CYJ"/>
+                            <constraint firstItem="ivg-hY-e89" firstAttribute="trailing" secondItem="lbN-iW-Q6S" secondAttribute="trailing" constant="20" id="94g-A7-lqg"/>
                             <constraint firstItem="Pjg-cV-eKD" firstAttribute="top" secondItem="OhR-jQ-O2v" secondAttribute="bottom" constant="20" id="ONf-32-fzU"/>
+                            <constraint firstItem="lbN-iW-Q6S" firstAttribute="top" secondItem="ivg-hY-e89" secondAttribute="top" id="QFc-Ow-nsl"/>
                             <constraint firstItem="OhR-jQ-O2v" firstAttribute="leading" secondItem="ivg-hY-e89" secondAttribute="leading" constant="20" id="RQa-6P-HlS"/>
-                            <constraint firstItem="OhR-jQ-O2v" firstAttribute="top" secondItem="ivg-hY-e89" secondAttribute="top" constant="20" id="RVd-0C-uf0"/>
+                            <constraint firstItem="lbN-iW-Q6S" firstAttribute="leading" secondItem="ivg-hY-e89" secondAttribute="leading" constant="20" id="UXD-jo-tMf"/>
                             <constraint firstItem="ivg-hY-e89" firstAttribute="trailing" secondItem="Pjg-cV-eKD" secondAttribute="trailing" constant="20" id="VF1-PN-UOC"/>
                             <constraint firstItem="Pjg-cV-eKD" firstAttribute="leading" secondItem="ivg-hY-e89" secondAttribute="leading" constant="20" id="cpq-MM-dgW"/>
                             <constraint firstItem="ivg-hY-e89" firstAttribute="bottom" secondItem="Pjg-cV-eKD" secondAttribute="bottom" constant="400" id="pjP-mN-QHb"/>
@@ -120,6 +131,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="segmentBar" destination="lbN-iW-Q6S" id="sS2-rg-r0N"/>
                         <outlet property="textBody" destination="Pjg-cV-eKD" id="3Vx-hT-FUK"/>
                         <outlet property="textField" destination="OhR-jQ-O2v" id="apD-El-K4b"/>
                     </connections>
@@ -148,6 +160,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="xHy-8d-dyQ"/>
+        <segue reference="Z4C-DD-wzZ"/>
     </inferredMetricsTieBreakers>
 </document>
